--- a/naat/notebooks/arianeweb/eda-ce.ipynb
+++ b/naat/notebooks/arianeweb/eda-ce.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,6 @@
        "      <th>Numero_Dossier</th>\n",
        "      <th>Date_Lecture</th>\n",
        "      <th>Numero_ECLI</th>\n",
-       "      <th>Avocat_Requerant</th>\n",
        "      <th>Type_Decision</th>\n",
        "      <th>Type_Recours</th>\n",
        "      <th>Code_Publication</th>\n",
@@ -89,8 +88,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>DCE_440521_20220427.xml</td>\n",
-       "      <td>2023-09-14</td>\n",
+       "      <td>DCE_456277_20221202.xml</td>\n",
+       "      <td>2022-12-03</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
@@ -101,8 +100,7 @@
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -112,16 +110,15 @@
        "      <td>None</td>\n",
        "      <td>CE</td>\n",
        "      <td>Section du Contentieux</td>\n",
-       "      <td>440521.0</td>\n",
-       "      <td>2022-04-27</td>\n",
-       "      <td>ECLI:FR:CECHR:2022:440521.20220427</td>\n",
-       "      <td>TOURNIQUET</td>\n",
+       "      <td>456277.0</td>\n",
+       "      <td>2022-12-02</td>\n",
+       "      <td>ECLI:FR:CECHR:2022:456277.20221202</td>\n",
        "      <td>Décision</td>\n",
-       "      <td>Excès de pouvoir</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Satisfaction partielle</td>\n",
+       "      <td>Plein contentieux</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Rejet</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -138,10 +135,9 @@
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2022-04-08</td>\n",
-       "      <td>22-225</td>\n",
-       "      <td>4ème et 1ère chambres réunies</td>\n",
+       "      <td>2022-11-09</td>\n",
+       "      <td>22630.0</td>\n",
+       "      <td>7ème et 2ème chambres réunies</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -158,8 +154,7 @@
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -169,37 +164,37 @@
       ],
       "text/plain": [
        "            Identification Date_Mise_Jour Code_Juridiction  \\\n",
-       "0  DCE_440521_20220427.xml     2023-09-14             None   \n",
+       "0  DCE_456277_20221202.xml     2022-12-03             None   \n",
        "1                     None           None               CE   \n",
        "2                     None           None             None   \n",
        "3                     None           None             None   \n",
        "\n",
        "           Nom_Juridiction  Numero_Dossier Date_Lecture  \\\n",
        "0                     None             NaN         None   \n",
-       "1  Section du Contentieux         440521.0   2022-04-27   \n",
+       "1  Section du Contentieux         456277.0   2022-12-02   \n",
        "2                     None             NaN         None   \n",
        "3                     None             NaN         None   \n",
        "\n",
-       "                          Numero_ECLI Avocat_Requerant Type_Decision  \\\n",
-       "0                                None             None          None   \n",
-       "1  ECLI:FR:CECHR:2022:440521.20220427       TOURNIQUET      Décision   \n",
-       "2                                None             None          None   \n",
-       "3                                None             None          None   \n",
+       "                          Numero_ECLI Type_Decision       Type_Recours  \\\n",
+       "0                                None          None               None   \n",
+       "1  ECLI:FR:CECHR:2022:456277.20221202      Décision  Plein contentieux   \n",
+       "2                                None          None               None   \n",
+       "3                                None          None               None   \n",
        "\n",
-       "       Type_Recours Code_Publication                Solution Date_Audience  \\\n",
-       "0              None             None                    None          None   \n",
-       "1  Excès de pouvoir                A  Satisfaction partielle          None   \n",
-       "2              None             None                    None    2022-04-08   \n",
-       "3              None             None                    None          None   \n",
+       "  Code_Publication Solution Date_Audience  Numero_Role  \\\n",
+       "0             None     None          None          NaN   \n",
+       "1                C    Rejet          None          NaN   \n",
+       "2             None     None    2022-11-09      22630.0   \n",
+       "3             None     None          None          NaN   \n",
        "\n",
-       "  Numero_Role             Formation_Jugement  Texte_Integral  \n",
-       "0        None                           None             NaN  \n",
-       "1        None                           None             NaN  \n",
-       "2      22-225  4ème et 1ère chambres réunies             NaN  \n",
-       "3        None                           None             NaN  "
+       "              Formation_Jugement  Texte_Integral  \n",
+       "0                           None             NaN  \n",
+       "1                           None             NaN  \n",
+       "2  7ème et 2ème chambres réunies             NaN  \n",
+       "3                           None             NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
