--- a/pdf-content-extractor/notebooks/content_extraction.ipynb
+++ b/pdf-content-extractor/notebooks/content_extraction.ipynb
@@ -28,7 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PDF_FILE = \"/home/clem/Documents/ADMINISTRATIF/achat immobilier/promesse-champagne.pdf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,27 +49,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Christel Cournil (dir.)\n",
+      "11341801 \n",
       "\n",
-      "Les grandes affaires climatiques\n",
+      "AM/SS/PROMESSE DE VENTE GAUDILLAT / BRUTTI-MAIRESSE et MAC GARRY\n",
       "\n",
-      "DICE Éditions\n",
-      "\n",
-      "Introduction\n",
-      "\n",
-      "Christel Cou\n"
+      "L'AN DEUX MILLE VINGT-T\n"
      ]
     }
    ],
    "source": [
     "print(output_string.getvalue()[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"extract-champagne.txt\", 'w') as txt_writer:\n",
+    "    txt_writer.write(output_string.getvalue())"
    ]
   },
   {
@@ -499,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
