--- a/sabin-center-climate-cases/notebooks/eda.ipynb
+++ b/sabin-center-climate-cases/notebooks/eda.ipynb
@@ -234,6 +234,142 @@
     "pd.read_csv(\"global_cases.csv\")\n",
     "pd.read_csv(\"us_cases.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">The &#x27;toml&#x27; package isn&#x27;t installed. To load settings from pyproject.toml or ~/.jupysql/config, install with: pip install toml</span>"
+      ],
+      "text/plain": [
+       "The 'toml' package isn't installed. To load settings from pyproject.toml or ~/.jupysql/config, install with: pip install toml"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import duckdb\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Import jupysql Jupyter extension to create SQL cells\n",
+    "%load_ext sql\n",
+    "\n",
+    "conn = duckdb.connect(\"/home/clem/Source/sandbox/sabin-center-climate-cases/translate_sabin/dev.duckdb\")\n",
+    "%sql conn --alias duckdb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>case_id</th>\n",
+       "            <th>filing_year</th>\n",
+       "            <th>case_name</th>\n",
+       "            <th>case_description</th>\n",
+       "            <th>case_categories</th>\n",
+       "            <th>principal_laws</th>\n",
+       "            <th>case_category_list</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>22</td>\n",
+       "            <td>2016</td>\n",
+       "            <td>TransCanada Keystone Pipeline, LP v. Kerry</td>\n",
+       "            <td>Challenge to Obama administration denial of presidential permit for Keystone XL Pipeline.\r<br></td>\n",
+       "            <td>Constitutional Claims>Other Constitutional Claims</td>\n",
+       "            <td>Article I (U.S. Constitution)|Article II (U.S. Constitution)</td>\n",
+       "            <td>['Constitutional Claims>Other Constitutional Claims']</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>29</td>\n",
+       "            <td>2016</td>\n",
+       "            <td>Americans for Clean Energy v. EPA</td>\n",
+       "            <td>Challenge to EPA's final renewable fuel standard rule for 2014, 2015, and 2016.</td>\n",
+       "            <td>Federal Statutory Claims>Clean Air Act>Industry Lawsuits>Renewable Fuel Standards</td>\n",
+       "            <td>Clean Air Act (CAA)|Energy Independence and Security Act (EISA)</td>\n",
+       "            <td>['Federal Statutory Claims>Clean Air Act>Industry Lawsuits>Renewable Fuel Standards']</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>31</td>\n",
+       "            <td>2015</td>\n",
+       "            <td>WildEarth Guardians v. Jewell</td>\n",
+       "            <td>Challenge to federal approval of mining plan for development of federally owned coal in Colorado.</td>\n",
+       "            <td>Federal Statutory Claims>NEPA</td>\n",
+       "            <td>National Environmental Policy Act (NEPA)</td>\n",
+       "            <td>['Federal Statutory Claims>NEPA']</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>38</td>\n",
+       "            <td>2016</td>\n",
+       "            <td>Center for Biological Diversity v. Federal Highway Administration</td>\n",
+       "            <td>Challenge to approval of a highway project in Riverside County in California.</td>\n",
+       "            <td>Federal Statutory Claims>NEPA|Federal Statutory Claims>Other Statutes and Regulations</td>\n",
+       "            <td>Department of Transportation Act (Section 4(f))|National Environmental Policy Act (NEPA)</td>\n",
+       "            <td>['Federal Statutory Claims>NEPA', 'Federal Statutory Claims>Other Statutes and Regulations']</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>41</td>\n",
+       "            <td>2016</td>\n",
+       "            <td>Idaho Conservation League v. U.S. Forest Service</td>\n",
+       "            <td>Challenge to approval of mine exploration project in Boise National Forest.</td>\n",
+       "            <td>Federal Statutory Claims>NEPA|Federal Statutory Claims>Other Statutes and Regulations</td>\n",
+       "            <td>National Environmental Policy Act (NEPA)|National Forest Management Act (NFMA)|Forest Service Organic Act</td>\n",
+       "            <td>['Federal Statutory Claims>NEPA', 'Federal Statutory Claims>Other Statutes and Regulations']</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------+-------------+-------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+\n",
+       "| case_id | filing_year |                             case_name                             |                                          case_description                                         |                                    case_categories                                    |                                               principal_laws                                              |                                      case_category_list                                      |\n",
+       "+---------+-------------+-------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+\n",
+       "|    22   |     2016    |             TransCanada Keystone Pipeline, LP v. Kerry            |                                                  Challenge to Obama administration denial of presidential permit for Keystone XL Pipeline.\n",
+       "                                                  |                   Constitutional Claims>Other Constitutional Claims                   |                        Article I (U.S. Constitution)|Article II (U.S. Constitution)                       |                    ['Constitutional Claims>Other Constitutional Claims']                     |\n",
+       "|         |             |                                                                   |                                                                                                   |                                                                                       |                                                                                                           |                                                                                              |\n",
+       "|    29   |     2016    |                 Americans for Clean Energy v. EPA                 |          Challenge to EPA's final renewable fuel standard rule for 2014, 2015, and 2016.          |   Federal Statutory Claims>Clean Air Act>Industry Lawsuits>Renewable Fuel Standards   |                      Clean Air Act (CAA)|Energy Independence and Security Act (EISA)                      |    ['Federal Statutory Claims>Clean Air Act>Industry Lawsuits>Renewable Fuel Standards']     |\n",
+       "|    31   |     2015    |                   WildEarth Guardians v. Jewell                   | Challenge to federal approval of mining plan for development of federally owned coal in Colorado. |                             Federal Statutory Claims>NEPA                             |                                  National Environmental Policy Act (NEPA)                                 |                              ['Federal Statutory Claims>NEPA']                               |\n",
+       "|    38   |     2016    | Center for Biological Diversity v. Federal Highway Administration |           Challenge to approval of a highway project in Riverside County in California.           | Federal Statutory Claims>NEPA|Federal Statutory Claims>Other Statutes and Regulations |          Department of Transportation Act (Section 4(f))|National Environmental Policy Act (NEPA)         | ['Federal Statutory Claims>NEPA', 'Federal Statutory Claims>Other Statutes and Regulations'] |\n",
+       "|    41   |     2016    |          Idaho Conservation League v. U.S. Forest Service         |            Challenge to approval of mine exploration project in Boise National Forest.            | Federal Statutory Claims>NEPA|Federal Statutory Claims>Other Statutes and Regulations | National Environmental Policy Act (NEPA)|National Forest Management Act (NFMA)|Forest Service Organic Act | ['Federal Statutory Claims>NEPA', 'Federal Statutory Claims>Other Statutes and Regulations'] |\n",
+       "+---------+-------------+-------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT  * FROM us_case_by_category\n",
+    "LIMIT 5"
+   ]
   }
  ],
  "metadata": {
