--- a/finetune-llm/notebooks/run-llama-gguf.ipynb
+++ b/finetune-llm/notebooks/run-llama-gguf.ipynb
@@ -4,22 +4,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run Llama on CPU\n",
     "\n",
-    "From https://dev.to/eteimz/running-large-language-models-on-the-cpu-3a46"
+    "## Run Llama on CPU\n",
+    "\n",
+    "* From https://dev.to/eteimz/running-large-language-models-on-the-cpu-3a46\n",
+    "\n",
+    "## Run Llama on GPU\n",
+    "* https://medium.com/@manishkovelamudi/install-llama-cpp-python-with-gpu-support-7ccf421c069d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make llama server with GPU\n",
+    "\n",
+    "```shell\n",
+    "cmake -B build \\\n",
+    "    -DLLAMA_CUBLAS=OFF \\\n",
+    "    -DGGML_CUDA=ON \\\n",
+    "    -DCUDA_PATH=/usr/local/cuda-12 \\\n",
+    "    -DCUDAToolkit_ROOT=/usr/local/cuda-12 \\\n",
+    "    -DCUDAToolkit_INCLUDE_DIR=/usr/local/cuda-12/include \\\n",
+    "    -DCUDAToolkit_LIBRARY_DIR=/usr/local/cuda-12/lib64\n",
+    "\n",
+    "cmake --build build --config Release -j 4 -t llama-server\n",
+    "```\n",
+    "\n",
+    "./build/bin/llama-server -m /home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf -c 2048 --port 8998 --n-gpu-layers 10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d1e6ccfaa564aae9ef9b3a60a2307ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Phi-3-medium-4k-instruct-Q6_K.gguf:   0%|          | 0.00/11.5G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/home/clem/.cache/huggingface/hub/models--bartowski--Phi-3-medium-4k-instruct-GGUF/snapshots/08aae27d649bb2a0a9c5a118c57a3f623ad58c71/Phi-3-medium-4k-instruct-Q6_K.gguf'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from huggingface_hub import hf_hub_download\n",
     "from llama_cpp import Llama\n",
     "\n",
-    "hf_hub_download(repo_id=\"TheBloke/Llama-2-13B-GGUF\", filename=\"llama-2-13b.Q4_0.gguf\")\n",
-    "model_path = \"/home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf\"\n"
+    "# hf_hub_download(repo_id=\"TheBloke/Llama-2-13B-GGUF\", filename=\"llama-2-13b.Q4_0.gguf\")\n",
+    "hf_hub_download(repo_id=\"bartowski/Phi-3-medium-4k-instruct-GGUF\", filename=\"Phi-3-medium-4k-instruct-Q6_K.gguf\")\n",
+    "\n",
+    "\"/home/clem/.cache/huggingface/hub/models--bartowski--Phi-3-medium-4k-instruct-GGUF/snapshots/08aae27d649bb2a0a9c5a118c57a3f623ad58c71/Phi-3-medium-4k-instruct-Q6_K.gguf\"\n",
+    "# model_path = \"/home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf\"\n"
    ]
   },
   {
