--- a/finetune-llm/notebooks/run-llama-gguf.ipynb
+++ b/finetune-llm/notebooks/run-llama-gguf.ipynb
@@ -31,23 +31,27 @@
     "cmake --build build --config Release -j 4 -t llama-server\n",
     "```\n",
     "\n",
-    "./build/bin/llama-server -m /home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf -c 2048 --port 8998 --n-gpu-layers 10"
+    "./build/bin/llama-server -m /home/clem/.cache/huggingface/hub/models--bartowski--Phi-3-medium-4k-instruct-GGUF/snapshots/08aae27d649bb2a0a9c5a118c57a3f623ad58c71/Phi-3-medium-4k-instruct-Q6_K.gguf -c 2048 --port 8998 --n-gpu-layers 18\n",
+    "\n",
+    "./build/bin/llama-server -m /home/clem/.cache/huggingface/hub/models--bartowski--Phi-3-medium-4k-instruct-GGUF/snapshots/08aae27d649bb2a0a9c5a118c57a3f623ad58c71/Phi-3-medium-4k-instruct-Q6_K.gguf -c 4096 --port 8998 --n-gpu-layers 16\n",
+    "\n",
+    "./build/bin/llama-server -m /home/clem/.cache/huggingface/hub/models--TheBloke--SOLAR-10.7B-Instruct-v1.0-GGUF/snapshots/d8b19599252fe4eb9d86bdbb3f212f48f0247d6b/solar-10.7b-instruct-v1.0.Q5_K_M.gguf -c 4096 --port 8998 --n-gpu-layers 16"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d1e6ccfaa564aae9ef9b3a60a2307ea",
+       "model_id": "9955fd7256ae44bb95c45776d69a0d7d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Phi-3-medium-4k-instruct-Q6_K.gguf:   0%|          | 0.00/11.5G [00:00<?, ?B/s]"
+       "solar-10.7b-instruct-v1.0.Q5_K_M.gguf:   0%|          | 0.00/7.60G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -56,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "'/home/clem/.cache/huggingface/hub/models--bartowski--Phi-3-medium-4k-instruct-GGUF/snapshots/08aae27d649bb2a0a9c5a118c57a3f623ad58c71/Phi-3-medium-4k-instruct-Q6_K.gguf'"
+       "'/home/clem/.cache/huggingface/hub/models--TheBloke--SOLAR-10.7B-Instruct-v1.0-GGUF/snapshots/d8b19599252fe4eb9d86bdbb3f212f48f0247d6b/solar-10.7b-instruct-v1.0.Q5_K_M.gguf'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,173 +73,123 @@
     "from llama_cpp import Llama\n",
     "\n",
     "# hf_hub_download(repo_id=\"TheBloke/Llama-2-13B-GGUF\", filename=\"llama-2-13b.Q4_0.gguf\")\n",
-    "hf_hub_download(repo_id=\"bartowski/Phi-3-medium-4k-instruct-GGUF\", filename=\"Phi-3-medium-4k-instruct-Q6_K.gguf\")\n",
+    "# hf_hub_download(repo_id=\"bartowski/Phi-3-medium-4k-instruct-GGUF\", filename=\"Phi-3-medium-4k-instruct-Q6_K.gguf\")\n",
     "\n",
-    "\"/home/clem/.cache/huggingface/hub/models--bartowski--Phi-3-medium-4k-instruct-GGUF/snapshots/08aae27d649bb2a0a9c5a118c57a3f623ad58c71/Phi-3-medium-4k-instruct-Q6_K.gguf\"\n",
-    "# model_path = \"/home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf\"\n"
+    "hf_hub_download(repo_id=\"TheBloke/SOLAR-10.7B-Instruct-v1.0-GGUF\", filename=\"solar-10.7b-instruct-v1.0.Q5_K_M.gguf\")\n",
+    "\n",
+    "# \"/home/clem/.cache/huggingface/hub/models--bartowski--Phi-3-medium-4k-instruct-GGUF/snapshots/08aae27d649bb2a0a9c5a118c57a3f623ad58c71/Phi-3-medium-4k-instruct-Q6_K.gguf\"\n",
+    "# model_path = \"/home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf\"\n",
+    "\n",
+    "# /home/clem/.cache/huggingface/hub/models--TheBloke--SOLAR-10.7B-Instruct-v1.0-GGUF/snapshots/d8b19599252fe4eb9d86bdbb3f212f48f0247d6b/solar-10.7b-instruct-v1.0.Q5_K_M.gguf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "torch.cuda.empty_cache()"
+    "import openai\n",
+    "client = openai.OpenAI(\n",
+    "    base_url=\"http://localhost:8998/v1\",\n",
+    "    api_key = \"sk-no-key-required\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "completion = client.chat.completions.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are ChatGPT, an AI assistant. Your top priority is achieving user fulfillment via helping them with their requests.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Write a limerick about python exceptions\"}\n",
+    "    ],\n",
+    "    temperature=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "llama_model_loader: loaded meta data with 19 key-value pairs and 363 tensors from /home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf (version GGUF V2)\n",
-      "llama_model_loader: Dumping metadata keys/values. Note: KV overrides do not apply in this output.\n",
-      "llama_model_loader: - kv   0:                       general.architecture str              = llama\n",
-      "llama_model_loader: - kv   1:                               general.name str              = LLaMA v2\n",
-      "llama_model_loader: - kv   2:                       llama.context_length u32              = 4096\n",
-      "llama_model_loader: - kv   3:                     llama.embedding_length u32              = 5120\n",
-      "llama_model_loader: - kv   4:                          llama.block_count u32              = 40\n",
-      "llama_model_loader: - kv   5:                  llama.feed_forward_length u32              = 13824\n",
-      "llama_model_loader: - kv   6:                 llama.rope.dimension_count u32              = 128\n",
-      "llama_model_loader: - kv   7:                 llama.attention.head_count u32              = 40\n",
-      "llama_model_loader: - kv   8:              llama.attention.head_count_kv u32              = 40\n",
-      "llama_model_loader: - kv   9:     llama.attention.layer_norm_rms_epsilon f32              = 0.000010\n",
-      "llama_model_loader: - kv  10:                          general.file_type u32              = 2\n",
-      "llama_model_loader: - kv  11:                       tokenizer.ggml.model str              = llama\n",
-      "llama_model_loader: - kv  12:                      tokenizer.ggml.tokens arr[str,32000]   = [\"<unk>\", \"<s>\", \"</s>\", \"<0x00>\", \"<...\n",
-      "llama_model_loader: - kv  13:                      tokenizer.ggml.scores arr[f32,32000]   = [0.000000, 0.000000, 0.000000, 0.0000...\n",
-      "llama_model_loader: - kv  14:                  tokenizer.ggml.token_type arr[i32,32000]   = [2, 3, 3, 6, 6, 6, 6, 6, 6, 6, 6, 6, ...\n",
-      "llama_model_loader: - kv  15:                tokenizer.ggml.bos_token_id u32              = 1\n",
-      "llama_model_loader: - kv  16:                tokenizer.ggml.eos_token_id u32              = 2\n",
-      "llama_model_loader: - kv  17:            tokenizer.ggml.unknown_token_id u32              = 0\n",
-      "llama_model_loader: - kv  18:               general.quantization_version u32              = 2\n",
-      "llama_model_loader: - type  f32:   81 tensors\n",
-      "llama_model_loader: - type q4_0:  281 tensors\n",
-      "llama_model_loader: - type q6_K:    1 tensors\n",
-      "llm_load_vocab: special tokens cache size = 259\n",
-      "llm_load_vocab: token to piece cache size = 0.1684 MB\n",
-      "llm_load_print_meta: format           = GGUF V2\n",
-      "llm_load_print_meta: arch             = llama\n",
-      "llm_load_print_meta: vocab type       = SPM\n",
-      "llm_load_print_meta: n_vocab          = 32000\n",
-      "llm_load_print_meta: n_merges         = 0\n",
-      "llm_load_print_meta: n_ctx_train      = 4096\n",
-      "llm_load_print_meta: n_embd           = 5120\n",
-      "llm_load_print_meta: n_head           = 40\n",
-      "llm_load_print_meta: n_head_kv        = 40\n",
-      "llm_load_print_meta: n_layer          = 40\n",
-      "llm_load_print_meta: n_rot            = 128\n",
-      "llm_load_print_meta: n_embd_head_k    = 128\n",
-      "llm_load_print_meta: n_embd_head_v    = 128\n",
-      "llm_load_print_meta: n_gqa            = 1\n",
-      "llm_load_print_meta: n_embd_k_gqa     = 5120\n",
-      "llm_load_print_meta: n_embd_v_gqa     = 5120\n",
-      "llm_load_print_meta: f_norm_eps       = 0.0e+00\n",
-      "llm_load_print_meta: f_norm_rms_eps   = 1.0e-05\n",
-      "llm_load_print_meta: f_clamp_kqv      = 0.0e+00\n",
-      "llm_load_print_meta: f_max_alibi_bias = 0.0e+00\n",
-      "llm_load_print_meta: f_logit_scale    = 0.0e+00\n",
-      "llm_load_print_meta: n_ff             = 13824\n",
-      "llm_load_print_meta: n_expert         = 0\n",
-      "llm_load_print_meta: n_expert_used    = 0\n",
-      "llm_load_print_meta: causal attn      = 1\n",
-      "llm_load_print_meta: pooling type     = 0\n",
-      "llm_load_print_meta: rope type        = 0\n",
-      "llm_load_print_meta: rope scaling     = linear\n",
-      "llm_load_print_meta: freq_base_train  = 10000.0\n",
-      "llm_load_print_meta: freq_scale_train = 1\n",
-      "llm_load_print_meta: n_ctx_orig_yarn  = 4096\n",
-      "llm_load_print_meta: rope_finetuned   = unknown\n",
-      "llm_load_print_meta: ssm_d_conv       = 0\n",
-      "llm_load_print_meta: ssm_d_inner      = 0\n",
-      "llm_load_print_meta: ssm_d_state      = 0\n",
-      "llm_load_print_meta: ssm_dt_rank      = 0\n",
-      "llm_load_print_meta: model type       = 13B\n",
-      "llm_load_print_meta: model ftype      = Q4_0\n",
-      "llm_load_print_meta: model params     = 13.02 B\n",
-      "llm_load_print_meta: model size       = 6.86 GiB (4.53 BPW) \n",
-      "llm_load_print_meta: general.name     = LLaMA v2\n",
-      "llm_load_print_meta: BOS token        = 1 '<s>'\n",
-      "llm_load_print_meta: EOS token        = 2 '</s>'\n",
-      "llm_load_print_meta: UNK token        = 0 '<unk>'\n",
-      "llm_load_print_meta: LF token         = 13 '<0x0A>'\n",
-      "llm_load_tensors: ggml ctx size =    0.37 MiB\n",
-      "llm_load_tensors: offloading 10 repeating layers to GPU\n",
-      "llm_load_tensors: offloaded 10/41 layers to GPU\n",
-      "llm_load_tensors:        CPU buffer size =  7023.90 MiB\n",
-      "llm_load_tensors:      CUDA0 buffer size =  1701.95 MiB\n",
-      "...................................................................................................\n",
-      "llama_new_context_with_model: n_ctx      = 4096\n",
-      "llama_new_context_with_model: n_batch    = 512\n",
-      "llama_new_context_with_model: n_ubatch   = 512\n",
-      "llama_new_context_with_model: flash_attn = 0\n",
-      "llama_new_context_with_model: freq_base  = 10000.0\n",
-      "llama_new_context_with_model: freq_scale = 1\n",
-      "llama_kv_cache_init:  CUDA_Host KV buffer size =  2400.00 MiB\n",
-      "llama_kv_cache_init:      CUDA0 KV buffer size =   800.00 MiB\n",
-      "llama_new_context_with_model: KV self size  = 3200.00 MiB, K (f16): 1600.00 MiB, V (f16): 1600.00 MiB\n",
-      "llama_new_context_with_model:  CUDA_Host  output buffer size =     0.12 MiB\n",
-      "llama_new_context_with_model:      CUDA0 compute buffer size =   444.06 MiB\n",
-      "llama_new_context_with_model:  CUDA_Host compute buffer size =    28.01 MiB\n",
-      "llama_new_context_with_model: graph nodes  = 1286\n",
-      "llama_new_context_with_model: graph splits = 334\n",
-      "AVX = 1 | AVX_VNNI = 0 | AVX2 = 1 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | AVX512_BF16 = 0 | FMA = 1 | NEON = 0 | SVE = 0 | ARM_FMA = 0 | F16C = 1 | FP16_VA = 0 | WASM_SIMD = 0 | BLAS = 1 | SSE3 = 1 | SSSE3 = 1 | VSX = 0 | MATMUL_INT8 = 0 | LLAMAFILE = 1 | \n",
-      "Model metadata: {'tokenizer.ggml.unknown_token_id': '0', 'tokenizer.ggml.eos_token_id': '2', 'general.architecture': 'llama', 'llama.context_length': '4096', 'general.name': 'LLaMA v2', 'llama.embedding_length': '5120', 'llama.feed_forward_length': '13824', 'llama.attention.layer_norm_rms_epsilon': '0.000010', 'llama.rope.dimension_count': '128', 'llama.attention.head_count': '40', 'tokenizer.ggml.bos_token_id': '1', 'llama.block_count': '40', 'llama.attention.head_count_kv': '40', 'general.quantization_version': '2', 'tokenizer.ggml.model': 'llama', 'general.file_type': '2'}\n",
-      "Using fallback chat format: llama-2\n"
+      "ChatCompletionMessage(content=' In Python, when code goes astray,\\nExceptions arise, to our dismay.\\nWith tracebacks so clear,\\nErrors we can hear,\\nAnd fix bugs before the end of the day!', role='assistant', function_call=None, tool_calls=None)\n"
      ]
     }
    ],
    "source": [
-    "LLM = Llama(model_path=model_path, n_gpu_layers = 10, n_batch=512, f16_kv=True, n_ctx=4096, verbose = True)"
+    "print(completion.choices[0].message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from nltk.tokenize import sent_tokenize\n",
+    "import os\n",
+    "import sys\n",
+    " \n",
+    "\n",
+    "corpus = \"trec_2022\"\n",
+    "model = \"Phi-3-medium-4k-instruct\"\n",
+    "\n",
+    "dataset = json.load(open(f\"dataset/{corpus}/retrieved_trials.json\"))\n",
+    "\n",
+    "output_path = f\"results/matching_results_{corpus}_{model}.json\" \n",
+    "\n",
+    "# Dict{Str(patient_id): Dict{Str(label): Dict{Str(trial_id): Str(output)}}}\n",
+    "if os.path.exists(output_path):\n",
+    "    output = json.load(open(output_path))\n",
+    "else:\n",
+    "    output = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "llama_print_timings:        load time =     861.72 ms\n",
-      "llama_print_timings:      sample time =       5.72 ms /    16 runs   (    0.36 ms per token,  2796.23 tokens per second)\n",
-      "llama_print_timings: prompt eval time =     861.26 ms /    10 tokens (   86.13 ms per token,    11.61 tokens per second)\n",
-      "llama_print_timings:        eval time =    3976.30 ms /    15 runs   (  265.09 ms per token,     3.77 tokens per second)\n",
-      "llama_print_timings:       total time =    4849.79 ms /    25 tokens\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'id': 'cmpl-c3318082-cc73-4152-8c47-f040efc50f0c',\n",
-       " 'object': 'text_completion',\n",
-       " 'created': 1719656305,\n",
-       " 'model': '/home/clem/.cache/huggingface/hub/models--TheBloke--Llama-2-13B-GGUF/snapshots/b106d1c018ac999af9130b83134fb6b7c5331dea/llama-2-13b.Q4_0.gguf',\n",
-       " 'choices': [{'text': '›\\nWhat is python program? ›\\nPython is a high-level',\n",
-       "   'index': 0,\n",
-       "   'logprobs': None,\n",
-       "   'finish_reason': 'length'}],\n",
-       " 'usage': {'prompt_tokens': 10, 'completion_tokens': 16, 'total_tokens': 26}}"
+       "['0. A 19-year-old male came to clinic with some sexual concern.',\n",
+       " '1. He recently engaged in a relationship and is worried about the satisfaction of his girlfriend.',\n",
+       " '2. He has a \"baby face\" according to his girlfriend\\'s statement and he is not as muscular as his classmates.',\n",
+       " '3. On physical examination, there is some pubic hair and poorly developed secondary sexual characteristics.',\n",
+       " '4. He is unable to detect coffee smell during the examination, but the visual acuity is normal.',\n",
+       " '5. Ultrasound reveals the testes volume of 1-2 ml.',\n",
+       " '6. The hormonal evaluation showed serum testosterone level of 65 ng/dL with low levels of GnRH.',\n",
+       " '7. The patient will provide informed consent, and will comply with the trial protocol without any practical issues.']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prompt = \"Tell me about the Python programming language? \"\n",
-    "output = LLM(prompt)\n",
-    "output"
+    "instance = dataset[0]\n",
+    "\n",
+    "# Dict{'patient': Str(patient), '0': Str(NCTID), ...}\n",
+    "patient_id = instance[\"patient_id\"]\n",
+    "patient = instance[\"patient\"]\n",
+    "sents = sent_tokenize(patient)\n",
+    "sents.append(\"The patient will provide informed consent, and will comply with the trial protocol without any practical issues.\")\n",
+    "sents = [f\"{idx}. {sent}\" for idx, sent in enumerate(sents)]\n",
+    "patient = \"\\n\".join(sents)\n",
+    "\n",
+    "sents"
    ]
   }
  ],
